@@ -14,6 +14,25 @@ namespace GraphX.Controls
     public class EdgeLabelControl : ContentControl, IEdgeLabelControl
     {
 
+        public static readonly DependencyProperty DisplayForSelfLoopedEdgesProperty = DependencyProperty.Register("DisplayForSelfLoopedEdges",
+                                                                       typeof(bool),
+                                                                       typeof(EdgeLabelControl),
+                                                                       new PropertyMetadata(false));
+        /// <summary>
+        /// Gets or sets if label should be visible for self looped edge
+        /// </summary>
+        public bool DisplayForSelfLoopedEdges
+        {
+            get
+            {
+                return (bool)GetValue(DisplayForSelfLoopedEdgesProperty);
+            }
+            set
+            {
+                SetValue(DisplayForSelfLoopedEdgesProperty, value);
+            }
+        }
+
        public static readonly DependencyProperty AngleProperty = DependencyProperty.Register("Angle",
                                                                                        typeof(double),
                                                                                        typeof(EdgeLabelControl),
@@ -59,6 +78,7 @@ namespace GraphX.Controls
 
         public void Show()
         {
+            if (EdgeControl.IsSelfLooped && !DisplayForSelfLoopedEdges) return;
             Visibility = Visibility.Visible;
         }
 
@@ -85,6 +105,13 @@ namespace GraphX.Controls
             LayoutUpdated += EdgeLabelControl_LayoutUpdated;
             HorizontalAlignment = HorizontalAlignment.Left;
             VerticalAlignment = VerticalAlignment.Top;
+            Loaded += EdgeLabelControl_Loaded;
+        }
+
+        void EdgeLabelControl_Loaded(object sender, RoutedEventArgs e)
+        {
+            if (EdgeControl.IsSelfLooped && !DisplayForSelfLoopedEdges) Hide();
+            else Show();
         }
 
         void EdgeLabelControl_LayoutUpdated(object sender, object e)
@@ -125,6 +152,19 @@ namespace GraphX.Controls
             if (EdgeControl.Source == null || EdgeControl.Target == null)
             {
                 Debug.WriteLine("EdgeLabelControl_LayoutUpdated() -> Got empty edgecontrol!");
+                return;
+            }
+
+            //if hidden
+            if (Visibility != Visibility.Visible) return;
+
+            if (EdgeControl.IsSelfLooped)
+            {
+                var idesiredSize = DesiredSize;
+                var pt = EdgeControl.Source.GetCenterPosition();
+                pt = pt.Offset(-idesiredSize.Width / 2, (EdgeControl.Source.DesiredSize.Height * .5) + 2 + (idesiredSize.Height * .5));
+                LastKnownRectSize = new Rect(pt.X, pt.Y, idesiredSize.Width, idesiredSize.Height);
+                Arrange(LastKnownRectSize);
                 return;
             }
 
